Fix inefficient constructor warning
Signed-off-by: Ferry Huberts <ferry.huberts@pelagic.nl>